--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "carrito-tienda",
+  "name": "cart-ecommerce-recat",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
-    "react-bootstrap": "^1.0.0-beta.12",
+    "react-bootstrap": "1.0.0-beta.12",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2",
+    "react-scripts": "3.2.0",
     "react-toastify": "^5.4.0"
   },
   "scripts": {
